ER OK TODO verificar os valores que não estão sendo setados corretamente no BD ex.: anydesk do client e o FK client_id da tabela item.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/client-inventoryDB
+spring.datasource.url=jdbc:postgresql://localhost:5432/inv-all_DB
 spring.datasource.username=postgresteste
 spring.datasource.password=banco123
 spring.jpa.hibernate.ddl-auto=update
